Integrate Camunda notifications for document uploads, add exception handling, and configure application properties